styling dashboard and created handlebars object

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
-    font-size: 34px;
+    font-size: 30px;
     font-style: normal;
     font-variant: normal;
     font-weight: 500;
@@ -19,7 +19,7 @@ h1 {
 }
 h3 {
     font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
-    font-size: 14px;
+    font-size: 25px;
     font-style: normal;
     font-variant: normal;
     font-weight: 500;
@@ -198,7 +198,12 @@ pre {
     background-image: url('https://static.pexels.com/photos/4154/clinic-doctor-health-hospital-large.jpg');
     background-size: cover;
     height: 85%;
-}   
+}  
+.jumbotron-gene-data {
+    background-image: url('https://static.pexels.com/photos/4154/clinic-doctor-health-hospital-large.jpg');
+    background-size: cover;
+    height: 45%;
+}  
 .main-h1 {
     padding-top: 300px;
     font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
@@ -255,6 +260,13 @@ font-weight: 300;
 color: white;
 margin-bottom: 69px;
 }
+.tools-h2 {
+
+font-size: 70px;
+font-weight: 300;
+color: midnightblue;
+margin-bottom: 135px;
+}
 .tool-main-h2 {
     position: absolute; 
     top: -100px; 
@@ -266,7 +278,7 @@ margin-bottom: 69px;
 }
 .trial-main-h2 {
     position: absolute; 
-    top: 20px; 
+    top: 112px; 
     left: 0; 
     width: 100%; 
     font-size: 70px;
@@ -275,36 +287,66 @@ margin-bottom: 69px;
 }
 .tool-main-h2-CTQ {
     position: absolute; 
-    top: -100px; 
+    top: -62px; 
     left: -65px; 
     width: 100%; 
     font-size: 55px;
     margin-left: 95px;
-    color: white;
+    color: midnightblue;
 }
 .tool-main-h2-SNP {
     position: absolute; 
-    top: -10px; 
+    top: 48px; 
     left: -65px; 
     width: 100%; 
     font-size: 55px;
     margin-left: 95px;
-    color: white;
+    color: midnightblue;
 }
 .tool-main-h2-VAFD {
     position: absolute; 
-    top: 130px; 
+    top: 172px; 
+    left: -110px; 
+    width: 100%; 
+    font-size: 55px;
+    margin-left: 95px;
+    color: midnightblue;
+}
+.tool-main-h2-text-reader {
+    position: absolute; 
+    top: 190px; 
+    left: -190px; 
+    width: 100%; 
+    font-size: 55px;
+    margin-left: 95px;
+    color: midnightblue;
+}
+.tool-main-h2-amsler {
+    position: absolute; 
+    top: -61px; 
     left: -150px; 
     width: 100%; 
     font-size: 55px;
     margin-left: 95px;
-    color: white;
+    color: midnightblue;
+}
+.tool-main-h2-glossary {
+    position: absolute; 
+    top: 43px; 
+    left: -191px; 
+    width: 100%; 
+    font-size: 55px;
+    margin-left: 95px;
+    color: midnightblue;
 }
 .tools-image {
     position: relative; 
     width: 100%;
 }
 
+.avail-trials-h2 {
+    font-size: 50px;
+}
 
 .what-is-header {
     margin-bottom: 10px;
@@ -343,12 +385,12 @@ margin-bottom: 69px;
     margin-top: 20px;
 }
 #treatments {
-    padding: 75px 0;
+    padding: 98px 0;
     background: #58b8fe;
     text-align: center;
     margin-bottom: 200px;
     /*border-radius: 30%;*/
-    margin-top: 20px;
+    margin-top: 115px;
     height: 720px;
 }
 .treatments-section {
@@ -541,7 +583,11 @@ ul.dropdown-menu {
 
 /*gene report table begins*/
 #gene-table {
-
+margin-top: 100px;
+width: 100%;
+}
+.td-trials {
+    font-size: 23px;
 }
 
 
@@ -657,7 +703,7 @@ img.question-image {
     border-radius: 5px;
 }
 .panel-footer {
-  height: 700px;
+  height: 250px;
   background-color: #58b8fe;
   margin-top:  20px;
  }
