--- a/views/resources/glossary.handlebars
+++ b/views/resources/glossary.handlebars
@@ -27,7 +27,7 @@
   <div class="col-md-12">
     <h2 class="glossary-h2"> Adult Stem Cell </h2>
 
-    <p class="lead" style="line-height: 2; font-size: 40px; margin-right: 40px">A self-renewing, unspecialized cell that is capabile of becoming any one of a number of more specialized cells.
+    <p class="lead" style="line-height: 2; font-size: 40px; margin-right: 40px">A self-renewing, unspecialized cell that is capable of becoming any one of a number of more specialized cells.
     A stem cell is a primitive, unspecialized cell that has the capacity to self-regenerate, but develops a highly specialized function when grown in the appropriate environment and treated with specific proteins or survival factors. In other words, it's a cell that "hasn't decided what it wants to be when it grows up." Stem cells in the human retina have been found in the ciliary body, a specialized structure that sits on either side of the iris, near the retina. These ciliary stem cells usually lie dormant in the adult. Stem cells have now been isolated by many scientific groups and are being evaluated as a potential source for replacement of RPE and photoreceptor cells. There are many different types of stem cells, including adult and embryonic stem cells. Adult stem cells are from mature tissue that can renew itself but has a limited ability to transform into specialized cell types (i.e., fewer cell options). Embryonic stem cells, being from early stages of development, have the theoretical potential to produce any kind of cell in the body. </p>
   </div>
 
@@ -1126,9 +1126,9 @@ The vitreous is the clear, jelly-like substance found in the middle of the eye t
     <h2 class="glossary-h2">Y Chromosome
 
 </h2>
-    <p class="lead" style="line-height: 1.2; font-size: 40px; margin-right: 40px">The chromosome (DNA package) passed-down from biological father to son that contains genes that determine male gender.
-The Y chromosome is the sex chromosome passed-down from biological father to son that contains genetic instructions that give men their gender (and other body characteristics). Males inherit one Y chromosome from their father and one X chromosome from their mother, and are therefore normally symptomatic if they have an X-linked disease. So far, there are no known retinal degenerative diseases linked to the Y chromosome.
-
+    <p class="lead" style="line-height: 2; font-size: 40px; margin-right: 40px">The chromosome (DNA package) passed-down from biological father to son that contains genes that determine male gender.
+The Y chromosome is the sex chromosome passed-down from biological father to son that contains genetic instructions that give men their gender (and other body characteristics). Males inherit one Y chromosome from their father and one X chromosome from their mother, and are therefore normally symptomatic if they have an X-linked disease. So far, there are no known retinal degenerative diseases linked to the Y chromosome. </p>
+  
   </div>
 </div>
 
@@ -1137,7 +1137,7 @@ The Y chromosome is the sex chromosome passed-down from biological father to son
     <h2 class="glossary-h2">Zinc
 
 </h2>
-    <p class="lead" style="line-height: 1.2; font-size: 40px; margin-right: 40px">A mineral that is required for nutrition and proper function and maintenance of the body. Zinc oxide (80 mg) is one component of the daily nutritional supplementation for treatment to prevent progression of vision loss in AMD (findings from AREDS clinical trial). Zinc oxide is also being tested in a new nutritional supplement formulation for the AREDS II clinical trial. If you use nutritional supplementation, please consult with your personal physician and ophthalmologist as your personal health situation may require monitoring.
+    <p class="lead" style="line-height: 2; font-size: 40px; margin-right: 40px">A mineral that is required for nutrition and proper function and maintenance of the body. Zinc oxide (80 mg) is one component of the daily nutritional supplementation for treatment to prevent progression of vision loss in AMD (findings from AREDS clinical trial). Zinc oxide is also being tested in a new nutritional supplement formulation for the AREDS II clinical trial. If you use nutritional supplementation, please consult with your personal physician and ophthalmologist as your personal health situation may require monitoring.
 
 
   </div>
