--- a/views/tools/genetic_report.handlebars
+++ b/views/tools/genetic_report.handlebars
@@ -1,6 +1,11 @@
-<div class="jumbotron">
-  <h1></h1>
+<div class="jumbotron-gene-data">
+  <h1 class="main-h1">Connect with 23andMe</h1>
 </div>
+<br>
+<br>
+<img src="/assets/images/23andMe.png"/>
+
+
 <table id="gene-table" class="table table-striped">
   <thead>
     <tr>
