23andMe api integration

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -218,7 +218,7 @@ pre {
 #main-row-sect {
     background-color: white;
     border-radius: 10%;
-    margin-top: 30px;
+    margin-top: 200px;
 }
 /*main page ends*/
 
@@ -278,7 +278,7 @@ margin-bottom: 135px;
 }
 .trial-main-h2 {
     position: absolute; 
-    top: 112px; 
+    top: 244px; 
     left: 0; 
     width: 100%; 
     font-size: 70px;
@@ -390,7 +390,7 @@ margin-bottom: 135px;
     text-align: center;
     margin-bottom: 200px;
     /*border-radius: 30%;*/
-    margin-top: 115px;
+    margin-top: 244px;
     height: 720px;
 }
 .treatments-section {
@@ -515,6 +515,7 @@ h3 {
  }
 #top-right-h3 {
     position: absolute;
+    line-height: 1;
     left: 370px;
     top: 95px;
     width: 300px;
@@ -522,8 +523,8 @@ h3 {
     background: rgba(0, 0, 0, 0.7);
     color: white;
     font: bold 24px/45px;
-    letter-spacing: -1px;
-    padding: 4px;
+    letter-spacing: 0px;
+    padding: 16px;
     font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
 
 
@@ -584,6 +585,7 @@ ul.dropdown-menu {
 /*gene report table begins*/
 #gene-table {
 margin-top: 100px;
+margin-left: 65px;
 width: 100%;
 }
 .td-trials {
