--- a/views/layouts/dash.handlebars
+++ b/views/layouts/dash.handlebars
@@ -45,6 +45,7 @@
 
     {{> footer}}
     <script> 
+    // RESPONSIVE VOICE API
     function getSelectionText() {
         var text = "";
         if (window.getSelection) {
@@ -63,12 +64,7 @@
 
     });
     </script>
-    <script>
-    $('a').mouseenter(function() { // Attach this function to all mouseenter events for 'a' tags 
-      responsiveVoice.cancel(); // Cancel anything else that may currently be speaking
-      responsiveVoice.speak($(this).text()); // Speak the text contents of all nodes within the current 'a' tag
-    });
-    </script>
+    
 
 </body>
 </html>
