--- a/views/tools/genetic_report.handlebars
+++ b/views/tools/genetic_report.handlebars
@@ -3,7 +3,15 @@
 </div>
 <br>
 <br>
-<img src="/assets/images/23andMe.png"/>
+
+<script src="https://api.23andme.com/res/js/ttam-0.3.js"></script>
+<div id="wrapper"></div>
+<script>
+    window.onload = function () {
+        var ttam = TTAM('dd6b7f51cb19ee4bd93bfe59438f7956');
+        ttam.connectButton('wrapper', ["basic", "rs2476601"]);
+    };
+</script>
 
 
 <table id="gene-table" class="table table-striped">
