--- a/views/tools/genetic_report.handlebars
+++ b/views/tools/genetic_report.handlebars
@@ -4,6 +4,8 @@
 <br>
 <br>
 
+<a href="https://api.23andme.com/authorize/?redirect_uri=http://localhost:3000/receive_code/&response_type=code&client_id=dd6b7f51cb19ee4bd93bfe59438f7956&scope=basic rs2476601"><img src="/assets/images/23andMe.png"/> </a>
+
 <script src="https://api.23andme.com/res/js/ttam-0.3.js"></script>
 <div id="wrapper"></div>
 <script>
