--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -24,42 +24,18 @@ Tools <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="dLabel">
                 <li><a href="#">All Tools</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#">Lutein & Zeaxathin Food Database</a></li>
-                <li role="separator" class="divider"></li>
                 <li><a href="/tools/all-trials">Find a Clinical Trial</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="/tools/genetic">23AndMe SNP Table</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#">Vitamin A Food Database</a></li>
-                <li role="separator" class="divider"></li>
                 <li><a href="/tools/amsler-test">Take The Amsler Test</a></li>
-              </ul>
-            </li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" id="a-dash-two" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-child" aria-hidden="true"></i>
-About Us <span class="caret"></span></a>
-              <ul class="dropdown-menu" aria-labelledby="dLabel">
-                <li><a href="#">Mission</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">About CesarCells</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Contact Us</a></li>
-                <li role="separator" class="divider"></li>
               </ul>
             </li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" id="a-dash-three"  data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-eye" aria-hidden="true"></i>
 Treatments <span class="caret"></span></a>
                 <ul class="dropdown-menu" aria-labelledby="dLabel">
-                    <li><a href="#">Stem Cell</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="#">Drug</a></li>
-                     <li role="separator" class="divider"></li>
-                    <li><a href="#">Bio Tech & Genetic</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="#">Low Vision Specialists</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="#">Retinal Physicians</a></li>
+                    <li><a href="/tools/all-trials">Browse Treatments</a></li>
                 </ul>
             </li>
             <li class="dropdown">
