--- a/views/resources/story_cesar.handlebars
+++ b/views/resources/story_cesar.handlebars
@@ -16,12 +16,15 @@
       <header class="what-is-header">
         <h2 class="what-is-h2">Story</h2>
       </header>
-        <p>
-          Cesar Gonzalez Panteleon..... 
+        <p class="lead" style="line-height: 2.4; font-size: 34px; margin-left: 50px; margin-right: 50px">
+          Of all the five senses, the one that arguably hurts the most to lose is vision. We rely on this sense to navigate through our world. Its function is integral to so many aspects of our lives, from processing your positioning and whereabouts, recognizing a loved one or what's on our plate for lunch, to reading a new book, a newspaper article, to driving yourself around. Much of our independence stems deeply from our ability to see. When Cesar Gonzalez began to lose his vision, he first noticed he could not see the roads so clearly at night. </p><br>
+          <p class="lead" style="line-height: 2.4; font-size: 34px; margin-left: 50px; margin-right: 50px">
+          As his vision loss progressed, he had trouble recognizing people's faces as he was slowly losing his central vision. He eventually could not drive at night and required to make adjustments to his work schedule so that he no longer risked driving when the sun was down. Sadly, this would not be the last of the major adjustments he would have to make. After being diagnosed with Stargarts disease, his wife and daughters desperately searched for a cure or potential treatments.</p><br>
+          <p class="lead" style="line-height: 2.4; font-size: 34px; margin-left: 50px; margin-right: 50px">
+          The first they found was a clinical study at Columbia Presbyterian but after many visits and examinations, all they could offer him was a faint hope that he would qualify for phase 2 of the trial that would approximately begin in 5 years. Five years came and went and when the doctor told him he did not qualify and should wait for the next phase, he and his family were devastated. Already in his late 60s, he began to accept that he would probably not receive any kind of treatment that could help him while he still had gusto for life. At this point, he became socially withdrawn. He avoided going to restaurants for social gatherings as he could no longer decipher what or where his food was on the plate.   
         </p><br>
-        <p>
-          Had a surgery performed where he..
-        </p> <br>
+        <p class="lead" style="line-height: 2.4; font-size: 34px; margin-left: 50px; margin-right: 50px">
+         He no longer could decipher faces as his central vision has significantly degenerated and often times had to explain himself when people approached him having thought he'd ignored them. Before the development of his disease, he was the social lite of the party. Everywhere he went he made many friends. He was independent. He was confident. He was strong. Suddenly, he had to depend on his family to drive everywhere, to read, to essentially be his eyes for him. His daughter, refusing to accept that this was her father's fate, continued to search for clinical trials that he could qualify for and found SCOTS. An expensive treatment one that was experimental naturally caused Cesar and his family to feel some apprehension but alas decided that trying and failing was better than not trying at all. It's been three months since his procedure, and his vision has already improved. They are subtle improvements but milestones for him nonetheless. He can sign his own receipts as he now sees the line, his aim has markedly improved while eating as well as picking things off the floor that he could not see before.. All things we take for granted. Cesar and his family have faith that his vision will continue to make significant strides and hope that he will be able to drive once more. </p><br>
       
     </section>
   </div>
