--- a/views/tools/all_trials.handlebars
+++ b/views/tools/all_trials.handlebars
@@ -13,6 +13,7 @@
              <table id="gene-table" class="table table-striped gene">
                <thead>
                  <tr>
+                     <th>ID</th>
                      <th>Name</th>
                      <th>Status</th>
                      <th>Interventions</th>
@@ -23,6 +24,7 @@
                </thead>
                <tbody>
                  <tr>
+                     <td class="td-trials">{{_id}}</td>
                      <td class="td-trials">{{name}}</td>
                      <td class="td-trials">{{status}}</td>
                      <td class="td-trials">{{interventions}}</td>
